--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,29 @@
 *{
-	margin: 0;
-	padding:0;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	max-width: 100%
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    max-width: 100%
 
 }
 head{}
 
 header{
     width: 1100px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 header .div{}
 
 body{
-	width: 1100px;
-    margin: 0 auto;
+    width: 1100px;
+    margin:auto;
 
 }
 
 .box{
-	margin-top: 130px;
+    /* margin-top: 130px; */
 }
 
 .logo-image{width: 144px;}
